--- a/10 - Functions, Tools and Agents with Langchain/3 - Agent.ipynb
+++ b/10 - Functions, Tools and Agents with Langchain/3 - Agent.ipynb
@@ -476,19 +476,11 @@
     "question = \"Author David Chanoff has collaborated with a U.S. Navy admiral who served as the ambassador to the United Kingdom under which President?\"\n",
     "agent_executor.invoke({\"input\": question})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1dba602b-cb83-4a7c-bff2-d9448e9eaa86",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "jupyter-labs-YaPI6rvD-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -502,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
